agregado un estilo para errores

--- a/static/css/recuperar.css
+++ b/static/css/recuperar.css
@@ -79,3 +79,10 @@ input{
     text-align: left;
     display: none;
 }
+
+#mensajeDatosIncorrectos{
+    font-size: 13px;
+    color: red;
+    text-align: left;
+    display: block;
+}
