agregar verificacion de activacion de cuenta en login

--- a/templates/IniciarSesion.html
+++ b/templates/IniciarSesion.html
@@ -19,6 +19,12 @@
             <p>
                 {{ error1 }}
             </p>
+            <p>
+                {{ error2 }}
+            </p>
+            <p>
+                {{ error3 }}
+            </p>
         </div>
 
         <input type="text" name="usuario" id="usuario" placeholder="Usuario" oninput="limpiarAlertasUsuario();" value="{{ usuario }}">
