agregar nombre al boton de Actualizar

--- a/templates/actualizarImagen.html
+++ b/templates/actualizarImagen.html
@@ -59,7 +59,7 @@
 			</div>
 			<div class='sk-asset sk-BTN-Register-BE564820-F3CD-4999-B0E0-5B1E9F770800'>
 
-				<input type="submit" value="Actualizar" class='sk-asset sk-Rectangle-2-Copy-3-ED038D5A-8C35-4D6D-8FB6-B59F90065482'/>
+				<input type="submit" name="Actualizar" value="Actualizar" class='sk-asset sk-Rectangle-2-Copy-3-ED038D5A-8C35-4D6D-8FB6-B59F90065482'/>
 
 			</div>
 			</form>
