corregir error de id_imagen en actualizar imagen

--- a/templates/actualizarImagen.html
+++ b/templates/actualizarImagen.html
@@ -45,6 +45,9 @@
 			<div class='sk-asset sk-Head-8EA2DEF6-63D5-4144-BEAB-C6BE24A70221'>
 				<div class='sk-asset sk-Agregar-Imagen-E29D98EA-F043-4899-8C6F-86245EC2F7AD'><span class="span1">Actualizar Imagen</span></div>
 			</div>
+
+			<input type="hidden" name="id_imagen" value="{{ id }}">
+
 			<div class='sk-asset sk-BTN-Register-BE564820-F3CD-4999-B0E0-5B1E9F770800'>
 
 				<input type="submit" name="Actualizar" value="Actualizar" class='sk-asset sk-Rectangle-2-Copy-3-ED038D5A-8C35-4D6D-8FB6-B59F90065482'/>
