Agregar portafolio para usuario - ver sus imagenes

--- a/templates/Dashboard/inicio.html
+++ b/templates/Dashboard/inicio.html
@@ -39,7 +39,7 @@
           <li class="drop-down"><a href="">Imagenes</a>
             <ul>
               <li><a href="/imagen_crear">Subir imagen</a></li>
-              <li><a href="/imagen_ver">Ver portafolio</a></li>              
+              <li><a href="/portafolio">Ver portafolio</a></li>
             </ul>
           </li>
           <li><a href="/logout">Salir</a></li>
