--- a/templates/Principal/inicio.html
+++ b/templates/Principal/inicio.html
@@ -61,7 +61,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-6">
                 <h4>Busca todas las imagenes</h4>                
-                <form action="" method="post">
+                <form action="{{ url_for('buscar')}}" method="post">
                   <input type="text" name="buscar" placeholder="Palabra clave..."><input type="submit" value="Buscar">
                 </form>
               </div>
