mostrar propietario de imagen en imagen_ver

--- a/templates/Dashboard/ver.html
+++ b/templates/Dashboard/ver.html
@@ -67,8 +67,8 @@
             <h3>{{ imagen[1] }}</h3>
             <ul>
               <li><strong>Descargas: </strong>: 1.6M</li>
-              <li><strong>Propietario</strong>: Eddy Hide</li>
-              <li><strong>Fecha</strong>: {{ imagen[6]}}</li>
+              <li><strong>Propietario</strong>: {{ imagen[7] }}</li>
+              <li><strong>Fecha</strong>: {{ imagen[6] }}</li>
               <li><a class="btn btn-success" href="/imagen_descargar/{{ imagen[0] }}">Descargar</a></li>
             </ul>
           </div>
