--- a/templates/crear3.html
+++ b/templates/crear3.html
@@ -78,13 +78,17 @@
         </div> -->
 
         <button class="btn btn-success" id="POST-name" name="subir" value="subir" data-action="upload">Subir</button>
+        <a href="/" class="btn btn-warning">Volver al inicio</a>
     </form>
-    {% if msg %}
-        <div class="alert alert-warning">
-            {{ msg }}
-        </div>
-    {% endif %}
-
+    <div class="container"><div class="row">
+        {% if msg %}
+            <div class="col-md-2">
+                <div class="alert alert-warning" data-aos-delay="200">
+                    {{ msg }}
+                </div>
+            </div>
+        {% endif %}
+    </div></div>
 </body>
 
 </html>
