Agregar nombre de usuario a la vistas

--- a/templates/Dashboard/portafolio.html
+++ b/templates/Dashboard/portafolio.html
@@ -34,8 +34,8 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
+          <li><a>{{ user }}</a></li>
           <li class="active"><a href="/">Inicio</a></li>
-          <li><a href="#">Usuario</a></li>
           <li class="drop-down"><a href="">Imagenes</a>
             <ul>
               <li><a href="/imagen_crear">Subir imagen</a></li>
