--- a/templates/Dashboard/inicio.html
+++ b/templates/Dashboard/inicio.html
@@ -34,8 +34,8 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
+          <li><a>{{ user }}</a></li>
           <li class="active"><a href="/">Inicio</a></li>
-          <li><a href="#">Usuario</a></li>
           <li class="drop-down"><a href="">Imagenes</a>
             <ul>
               <li><a href="/imagen_crear">Subir imagen</a></li>
@@ -108,7 +108,9 @@
               <div class="portfolio-info">
                 <h4>{{ image[1] }}</h4>
                 <a href="/static/uploads/{{ image[4] }}" data-gall="portfolioGallery" class="venobox preview-link" title="Visualizar"><i class="bx bx-camera"></i></a>
-                <a href="/imagen_ver/{{ image[0] }}" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>                
+                <a href="/imagen_ver/{{ image[0] }}" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
+                <!-- <a href="/imagen_descargar?imagen=portfolio-1.jpg" class="details-link" title="Descargar"><i class="bx bx-download"></i></a> -->
+
               </div>
             </div>
           {% endfor %}
