corregir errores al dar click sobre boton imagenes en dashboard/inicio, corregir error al crear imagen con datos vacios

--- a/templates/Dashboard/inicio.html
+++ b/templates/Dashboard/inicio.html
@@ -36,7 +36,8 @@
         <ul>
           <li><a>{{ user }}</a></li>
           <li class="active"><a href="/">Inicio</a></li>
-          <li class="drop-down"><a href="">Imagenes</a>
+          <!-- <li class="drop-down"><a href="">Imagenes</a> -->
+          <li class="drop-down"><a>Imagenes</a>
             <ul>
               <li><a href="/imagen_crear">Subir imagen</a></li>
               <li><a href="/portafolio">Ver portafolio</a></li>
